# simple-ssp-parser

./: .clang-format  CMakeLists.txt  LICENSE  README.MD  conanfile.py  vcpkg.json
.github/.workflows/: upload.yml
.github/workflows/: build.yml  upload.yml
cmake/: config.cmake.in  project-config.cmake.in
include/ssp/: ssp.hpp  ssp_parser.hpp
include/ssp/util/: temp_dir.hpp
src/: CMakeLists.txt
src/ssp/: ssp.cpp  ssp_parser.cpp
src/ssp/util/: fs_portability.hpp  random.hpp  temp_dir.cpp  temp_dir.hpp  unzipper.cpp  unzipper.hpp  uuid.cpp  uuid.hpp
tests/: CMakeLists.txt  test_ssp_parser.cpp
